--- a/xss/production/test/animtest.html
+++ b/xss/production/test/animtest.html
@@ -184,7 +184,7 @@ window.onload = function()
             lbl4.set_width(140);
             lbl4.set_height(35);
 		    btn1 = 
-			new ms.ui.Image(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Image(g_ui_root.manager, g_ui_root, "images/img1.png");
         btn1 = btn1;
             btn1.set_x(40);
             btn1.set_y(110);
@@ -198,7 +198,7 @@ window.onload = function()
 	);
 		application.are_obj_events = true;
 		    btn2 = 
-			new ms.ui.Image(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Image(g_ui_root.manager, g_ui_root, "images/img1.png");
         btn2 = btn2;
             btn2.set_x(40);
             btn2.set_y(160);
@@ -212,7 +212,7 @@ window.onload = function()
 	);
 		application.are_obj_events = true;
 		    btn3 = 
-			new ms.ui.Image(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Image(g_ui_root.manager, g_ui_root, "images/img1.png");
         btn3 = btn3;
             btn3.set_x(40);
             btn3.set_y(210);
@@ -231,7 +231,7 @@ anim3.start();
 	);
 		application.are_obj_events = true;
 		    btn4 = 
-			new ms.ui.Image(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Image(g_ui_root.manager, g_ui_root, "images/img1.png");
         btn4 = btn4;
             btn4.set_x(40);
             btn4.set_y(260);
