--- a/xss/production/test/box2d2.html
+++ b/xss/production/test/box2d2.html
@@ -272,7 +272,7 @@ window.onload = function()
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    btn1 = 
-			new ms.ui.Button(g_ui_root.manager, g_ui_root, null, null);
+			new ms.ui.Button(g_ui_root.manager, g_ui_root, "images/smile_sad_48.png", "images/smile_grin_48.png");
         btn1 = btn1;
             btn1.set_x(200);
             btn1.set_y(200);
