--- a/xss/production/test/box2d5.html
+++ b/xss/production/test/box2d5.html
@@ -537,31 +537,31 @@ window.onload = function()
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    __label1 = 
-			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, "11px Verdana");
         __label1 = __label1;
             __label1.set_x(200);
             __label1.set_y(75);
             __label1.text("The happy and sad smileys are connected. Will be?");
 		    __label2 = 
-			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, "11px Verdana");
         __label2 = __label2;
             __label2.set_x(200);
             __label2.set_y(95);
             __label2.text("Try to move any of them with the mouse");
 		    __label3 = 
-			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, "11px Verdana");
         __label3 = __label3;
             __label3.set_x(50);
             __label3.set_y(135);
             __label3.text("Some faces are happy because they are linked but can rotate freely...(distance joint)");
 		    __label4 = 
-			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, "11px Verdana");
         __label4 = __label4;
             __label4.set_x(50);
             __label4.set_y(155);
             __label4.text("Others are sad because they are glued together and have no free will...(weld joint)");
 		    __label5 = 
-			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, "11px Verdana");
         __label5 = __label5;
             __label5.set_x(50);
             __label5.set_y(175);
