--- a/xss/production/test/box2dcar.html
+++ b/xss/production/test/box2dcar.html
@@ -684,7 +684,7 @@ window.onload = function()
             __floor4.set_width(10);
             __floor4.set_height(600);
 		    __label1 = 
-			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, "11px Verdana");
         __label1 = __label1;
             __label1.set_x(100);
             __label1.set_y(75);
