--- a/xss/production/test/jquery2.html
+++ b/xss/production/test/jquery2.html
@@ -7,8 +7,13 @@
 <script type="text/javascript" src="../js/jquery-ui-1.8.18.custom.min.js"></script>
 <script type="text/javascript" src="../js/jquery-idiom.js"></script>
 <link rel="stylesheet" href="../css/ui-lightness/jquery-ui-1.8.18.custom.css">
+                <script type="text/javascript" src="jquery-1.7.1.min.js"></script>
+                <script type="text/javascript" src="jquery-ui-1.8.18.custom.min.js"></script>
+                <script type="text/javascript" src="jquery-idiom.js"></script>
+                <script type="text/javascript" src="jquery-ui-1.8.18.custom.css"></script>
 <script type="text/javascript">
 $(function() {
+        var application = {};
 			var main = $("#main");
 			var r1 = $("#r1");
 			var r2 = $("#r2");
@@ -16,8 +21,9 @@ $(function() {
 			var t1 = $("#t1");
 			var b1 = $("#b1");
 			var c1 = $("#c1");
-			var application = $("#application");
-});
+        if (application.init)
+            application.init();
+    });
 </script>
 <style>
 #main {width : 600px;height : 400px}
