--- a/xss/production/test/paintings_grad.html
+++ b/xss/production/test/paintings_grad.html
@@ -567,11 +567,10 @@ application.events.dispatch("updates", []);
 application.events.dispatch("switch_cameras", []);
 }
 var anim_plane;var mat;var scene;var camera_1;
-        function create_anim_plane(
+    function create_anim_plane(
     width,height,x_segments,y_segments ) { 
     var anim_plane;
-	    anim_plane_plane = 
-		new THREE.Plane(width, height, x_segments, y_segments) ;
+	    anim_plane_plane = new THREE.Plane(width, height, x_segments, y_segments) ;
 	    anim_plane = new THREE.Mesh(anim_plane_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(anim_plane);
 		anim_plane.events = new ms.event.EventHolder();
@@ -1872,7 +1871,7 @@ g_sequence_manager);
 																 color: 'red'});
 	liquid.invalidate();
 		    banner = 
-			new ms.ui.Image(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Image(g_ui_root.manager, g_ui_root, "images/pictures/banner.png");
         banner = banner;
             banner.set_x(15);
             banner.set_y(10);
@@ -1880,7 +1879,7 @@ g_sequence_manager);
             banner.set_height(28);
             banner.alpha(0);
 		    loading = 
-			new ms.ui.Image(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Image(g_ui_root.manager, g_ui_root, "images/pictures/loading.png");
         loading = loading;
             loading.set_x(280);
             loading.set_y(550);
@@ -1888,7 +1887,7 @@ g_sequence_manager);
             loading.set_height(22);
             loading.alpha(0);
 		    lens1 = 
-			new ms.ui.Image(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Image(g_ui_root.manager, g_ui_root, "images/pictures/lens_d1.png");
         lens1 = lens1;
             lens1.set_x(225);
             lens1.set_y(225);
@@ -1896,7 +1895,7 @@ g_sequence_manager);
             lens1.set_height(250);
             lens1.alpha(0);
 		    lens2 = 
-			new ms.ui.Image(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Image(g_ui_root.manager, g_ui_root, "images/pictures/lens_d2.png");
         lens2 = lens2;
             lens2.set_x(220);
             lens2.set_y(220);
@@ -1904,7 +1903,7 @@ g_sequence_manager);
             lens2.set_height(260);
             lens2.alpha(0);
 		    facebook = 
-			new ms.ui.Image(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Image(g_ui_root.manager, g_ui_root, "images/pictures/facebook.png");
         facebook = facebook;
             facebook.set_x(750);
             facebook.set_y(4);
@@ -1912,7 +1911,7 @@ g_sequence_manager);
             facebook.set_height(31);
             facebook.alpha(0);
 		    twitter = 
-			new ms.ui.Image(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Image(g_ui_root.manager, g_ui_root, "images/pictures/twitter.png");
         twitter = twitter;
             twitter.set_x(800);
             twitter.set_y(4);
@@ -1920,7 +1919,7 @@ g_sequence_manager);
             twitter.set_height(31);
             twitter.alpha(0);
 		    btn1 = 
-			new ms.ui.Button(g_ui_root.manager, g_ui_root, null, null);
+			new ms.ui.Button(g_ui_root.manager, g_ui_root, "images/pictures/arrow_up.png", "images/pictures/arrow_down.png");
         btn1 = btn1;
             btn1.set_x(0);
             btn1.set_y(300);
@@ -1962,7 +1961,7 @@ application.zoomed.rotation.y = 0;
 	);
 		application.are_obj_events = true;
 		    btn2 = 
-			new ms.ui.Button(g_ui_root.manager, g_ui_root, null, null);
+			new ms.ui.Button(g_ui_root.manager, g_ui_root, "images/pictures/arrow_up.png", "images/pictures/arrow_down.png");
         btn2 = btn2;
             btn2.set_x(840);
             btn2.set_y(300);
@@ -2048,7 +2047,7 @@ application.zoomed.rotation.y = 0;
             line4.alpha(60);
             line4.set_color("white");
 		    rect1 = 
-			new ms.ui.Rectangle(g_ui_root.manager, g_ui_root, null, null, null);
+			new ms.ui.Rectangle(g_ui_root.manager, g_ui_root, null, "white", null);
         rect1 = rect1;
             rect1.set_x(200);
             rect1.set_y(200);
@@ -2058,10 +2057,9 @@ application.zoomed.rotation.y = 0;
 mat = new THREE.MeshBasicMaterial({
 color:white
 	});
-			scene = 
-			new THREE.Scene() ;
-		camera_1 = 
-		new THREE.Camera(45, 1.5, 1, 10000, null) ;	
+			    scene = new THREE.Scene() ;
+		    camera_1 = 
+		    new THREE.Camera(45, 1.5, 1, 10000, null) ;	
 		active_camera = camera_1;
             camera_1.position.z = 1000;
             application.art_planes = [];
