--- a/xss/production/test/ui_cliparea.html
+++ b/xss/production/test/ui_cliparea.html
@@ -218,13 +218,13 @@ window.onload = function()
             ca1.set_width(100);
             ca1.set_height(120);
 		    __label1 = 
-			new ms.ui.Label(div1.manager, div1, null);
+			new ms.ui.Label(div1.manager, div1, "Verdana");
         __label1 = __label1;
             __label1.set_x(40);
             __label1.set_y(75);
             __label1.text("use arrows to move the clip area");
 		    lbl1 = 
-			new ms.ui.Label(div1.manager, div1, null);
+			new ms.ui.Label(div1.manager, div1, "Verdana");
         lbl1 = lbl1;
             lbl1.set_x(100);
             lbl1.set_y(90);
@@ -238,7 +238,7 @@ window.onload = function()
             ca2.set_width(100);
             ca2.set_height(100);
 		    btn1 = 
-			new ms.ui.Button(div1.manager, div1, null, null);
+			new ms.ui.Button(div1.manager, div1, "images/smile_sad_48.png", "images/smile_grin_48.png");
         btn1 = btn1;
             btn1.set_x(90);
             btn1.set_y(100);
@@ -255,7 +255,7 @@ application.clicks = application.clicks + 1;
 	);
 		application.are_obj_events = true;
 		    btn2 = 
-			new ms.ui.Button(div1.manager, div1, null, null);
+			new ms.ui.Button(div1.manager, div1, "images/smile_sad_48.png", "images/smile_grin_48.png");
         btn2 = btn2;
             btn2.set_x(150);
             btn2.set_y(100);
@@ -263,7 +263,7 @@ application.clicks = application.clicks + 1;
             btn2.set_width(50);
             btn2.set_height(50);
 		    stateBtn = 
-			new ms.ui.StateButton(g_ui_root.manager, g_ui_root, null, null);
+			new ms.ui.StateButton(g_ui_root.manager, g_ui_root, "images/smile_grin_48.png", "images/smile_sad_48.png");
         stateBtn = stateBtn;
             stateBtn.set_x(270);
             stateBtn.set_y(200);
@@ -271,7 +271,7 @@ application.clicks = application.clicks + 1;
             stateBtn.set_width(50);
             stateBtn.set_height(50);
 		    lbl3 = 
-			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, "Verdana");
         lbl3 = lbl3;
             lbl3.set_x(330);
             lbl3.set_y(240);
