--- a/xss/production/test/ui_drag.html
+++ b/xss/production/test/ui_drag.html
@@ -173,19 +173,19 @@ window.onload = function()
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    __label1 = 
-			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, "Verdana");
         __label1 = __label1;
             __label1.set_x(240);
             __label1.set_y(75);
             __label1.text("drag the smile to move it");
 		    lbl1 = 
-			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, "Verdana");
         lbl1 = lbl1;
             lbl1.set_x(250);
             lbl1.set_y(90);
             lbl1.text("click smiley");
 		    btn1 = 
-			new ms.ui.Button(g_ui_root.manager, g_ui_root, null, null);
+			new ms.ui.Button(g_ui_root.manager, g_ui_root, "images/smile_sad_48.png", "images/smile_grin_48.png");
         btn1 = btn1;
             btn1.set_x(270);
             btn1.set_y(100);
@@ -210,7 +210,7 @@ btn1.set_y(y - btn1.h / 2);
 	);
 		application.are_obj_events = true;
 		    img1 = 
-			new ms.ui.Image(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Image(g_ui_root.manager, g_ui_root, "images/box.png");
         img1 = img1;
             img1.set_x(470);
             img1.set_y(300);
@@ -218,12 +218,12 @@ btn1.set_y(y - btn1.h / 2);
             img1.set_width(50);
             img1.set_height(50);
 		    tb1 = 
-			new ms.ui.TextButton(g_ui_root.manager, g_ui_root, null, null);
+			new ms.ui.TextButton(g_ui_root.manager, g_ui_root, "Aceptar", "12px Tahoma");
         tb1 = tb1;
             tb1.set_x(400);
             tb1.set_y(200);
 		    stateBtn = 
-			new ms.ui.StateButton(g_ui_root.manager, g_ui_root, null, null);
+			new ms.ui.StateButton(g_ui_root.manager, g_ui_root, "images/smile_grin_48.png", "images/smile_sad_48.png");
         stateBtn = stateBtn;
             stateBtn.set_x(270);
             stateBtn.set_y(200);
@@ -231,7 +231,7 @@ btn1.set_y(y - btn1.h / 2);
             stateBtn.set_width(50);
             stateBtn.set_height(50);
 		    lbl3 = 
-			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, "Verdana");
         lbl3 = lbl3;
             lbl3.set_x(330);
             lbl3.set_y(240);
