--- a/xss/production/test/ui_painter.html
+++ b/xss/production/test/ui_painter.html
@@ -158,7 +158,7 @@ window.onload = function()
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    __label1 = 
-			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, "12px Verdana");
         __label1 = __label1;
             __label1.set_x(200);
             __label1.set_y(200);
