--- a/xss/production/test/ui_placement.html
+++ b/xss/production/test/ui_placement.html
@@ -268,37 +268,37 @@ window.onload = function()
             test1.set_width(400);
             test1.set_height(200);
 		    lbl0 = 
-			new ms.ui.Label(test1.manager, test1, null);
+			new ms.ui.Label(test1.manager, test1, "12px Verdana");
         lbl0 = lbl0;
             lbl0.set_x(240);
             lbl0.set_y(75);
             lbl0.text("Use keyb arrows to move div or btn");
 		    lbl2 = 
-			new ms.ui.Label(test1.manager, test1, null);
+			new ms.ui.Label(test1.manager, test1, "12px Verdana");
         lbl2 = lbl2;
             lbl2.set_x(240);
             lbl2.set_y(100);
             lbl2.text("Use +,- numpad to resize div");
 		    lbl3 = 
-			new ms.ui.Label(test1.manager, test1, null);
+			new ms.ui.Label(test1.manager, test1, "12px Verdana");
         lbl3 = lbl3;
             lbl3.set_x(240);
             lbl3.set_y(125);
             lbl3.text("Use CTRL/SHIFT to hide/show the div");
 		    lbl4 = 
-			new ms.ui.Label(test1.manager, test1, null);
+			new ms.ui.Label(test1.manager, test1, "12px Verdana");
         lbl4 = lbl4;
             lbl4.set_x(40);
             lbl4.set_y(150);
             lbl4.text("Use SPACE to unplace the button and clic the arrow buttons to replace it");
 		    lbl1 = 
-			new ms.ui.Label(test1.manager, test1, null);
+			new ms.ui.Label(test1.manager, test1, "12px Verdana");
         lbl1 = lbl1;
             lbl1.set_x(270);
             lbl1.set_y(200);
             lbl1.text("Click smiley");
 		    btn1 = 
-			new ms.ui.Button(test1.manager, test1, null, null);
+			new ms.ui.Button(test1.manager, test1, "images/smile_sad_48.png", "images/smile_grin_48.png");
         btn1 = btn1;
             btn1.set_width(50);
             btn1.set_height(50);
@@ -312,7 +312,7 @@ application.clicks = application.clicks + 1;
 	);
 		application.are_obj_events = true;
 		    btnRight = 
-			new ms.ui.Button(g_ui_root.manager, g_ui_root, null, null);
+			new ms.ui.Button(g_ui_root.manager, g_ui_root, "images/arrow_right_green_48.png", "images/arrow_right_48.png");
         btnRight = btnRight;
             btnRight.set_x(320);
             btnRight.set_y(350);
@@ -327,7 +327,7 @@ application.flag = true;
 	);
 		application.are_obj_events = true;
 		    btnLeft = 
-			new ms.ui.Button(g_ui_root.manager, g_ui_root, null, null);
+			new ms.ui.Button(g_ui_root.manager, g_ui_root, "images/arrow_right_green_48.png", "images/arrow_right_48.png");
         btnLeft = btnLeft;
             btnLeft.set_x(220);
             btnLeft.set_y(350);
@@ -343,7 +343,7 @@ application.flag = true;
 	);
 		application.are_obj_events = true;
 		    btnUp = 
-			new ms.ui.Button(g_ui_root.manager, g_ui_root, null, null);
+			new ms.ui.Button(g_ui_root.manager, g_ui_root, "images/arrow_right_green_48.png", "images/arrow_right_48.png");
         btnUp = btnUp;
             btnUp.set_x(270);
             btnUp.set_y(300);
@@ -359,7 +359,7 @@ application.flag = true;
 	);
 		application.are_obj_events = true;
 		    btnDown = 
-			new ms.ui.Button(g_ui_root.manager, g_ui_root, null, null);
+			new ms.ui.Button(g_ui_root.manager, g_ui_root, "images/arrow_right_green_48.png", "images/arrow_right_48.png");
         btnDown = btnDown;
             btnDown.set_x(270);
             btnDown.set_y(400);
