--- a/xss/production/test/3js-ms.html
+++ b/xss/production/test/3js-ms.html
@@ -208,7 +208,7 @@ threejs_load_resources(function()
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    lbl0 = 
-			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, "12px Verdana");
         lbl0 = lbl0;
             lbl0.set_x(240);
             lbl0.set_y(75);
@@ -216,19 +216,17 @@ threejs_load_resources(function()
 cylinder_material = new THREE.MeshBasicMaterial({
 color:Math.random() * 0xffffff
 	});
-			scene = 
-			new THREE.Scene() ;
-		camera_1 = 
-		new THREE.Camera(75, 1.5, 1, 3000, null) ;	
+			    scene = new THREE.Scene() ;
+		    camera_1 = 
+		    new THREE.Camera(75, 1.5, 1, 3000, null) ;	
 		active_camera = camera_1;
             camera_1.position.z = 1000;
-	light = 
-	new THREE.DirectionalLight(1677, null, null, null) ;
-	scene.addLight(light);
+	    light = 
+	    new THREE.DirectionalLight(1677, null, null, null) ;
+	    scene.addLight(light);
             light.position.y = 0.5;
             light.position.z = 1;
-	    cylinder_1_cylinder = 
-		new THREE.Cylinder(200, 100, 100, 500, null, null) ;
+	    cylinder_1_cylinder = new THREE.Cylinder(200, 100, 100, 500, null, null) ;
 	    cylinder_1 = new THREE.Mesh(cylinder_1_cylinder, cylinder_material);
 	    scene.addObject(cylinder_1);
 		cylinder_1.events = new ms.event.EventHolder();
