--- a/xss/production/test/3js_particle.html
+++ b/xss/production/test/3js_particle.html
@@ -55,10 +55,9 @@ application.events.dispatch("switch_cameras", []);
 var scene;var camera_1;var particle_1;
 threejs_load_resources(function()
 {
-			scene = 
-			new THREE.Scene() ;
-		camera_1 = 
-		new THREE.Camera(70, 1.5, 1, 1000, null) ;	
+			    scene = new THREE.Scene() ;
+		    camera_1 = 
+		    new THREE.Camera(70, 1.5, 1, 1000, null) ;	
 		active_camera = camera_1;
             camera_1.position.y = 300;
             camera_1.position.z = 500;
