--- a/xss/production/test/3js_particle_system.html
+++ b/xss/production/test/3js_particle_system.html
@@ -119,16 +119,15 @@ threejs_load_resources(function()
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    lbl0 = 
-			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, "12px Verdana");
         lbl0 = lbl0;
             lbl0.set_x(350);
             lbl0.set_y(50);
             lbl0.set_color("White");
             lbl0.text("Move the mouse to rotate the camera");
-			scene = 
-			new THREE.Scene() ;
-		camera_1 = 
-		new THREE.Camera(75, 1.5, 1, 3000, null) ;	
+			    scene = new THREE.Scene() ;
+		    camera_1 = 
+		    new THREE.Camera(75, 1.5, 1, 3000, null) ;	
 		active_camera = camera_1;
             camera_1.position.z = 1000;
 		for ( var i = 0; i < 1000; i++ ) {
