--- a/xss/production/test/ms4.html
+++ b/xss/production/test/ms4.html
@@ -193,7 +193,7 @@ window.onload = function()
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    img1 = 
-			new ms.ui.Image(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Image(g_ui_root.manager, g_ui_root, "images/img1.png");
         img1 = img1;
             img1.set_x(100);
             img1.set_y(100);
@@ -207,7 +207,7 @@ window.onload = function()
 	);
 		application.are_obj_events = true;
 		    img2 = 
-			new ms.ui.Image(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Image(g_ui_root.manager, g_ui_root, "images/img1.png");
         img2 = img2;
             img2.set_x(160);
             img2.set_y(100);
