--- a/xss/production/test/ms5.html
+++ b/xss/production/test/ms5.html
@@ -289,14 +289,14 @@ window.onload = function()
 	    test1.mouse_thru = true;
         test1 = test1;
 		    lbl1 = 
-			new ms.ui.Label(test1.manager, test1, null);
+			new ms.ui.Label(test1.manager, test1, "Verdana");
         lbl1 = lbl1;
             lbl1.set_x(270);
             lbl1.set_y(200);
             lbl1.set_rotation(-0.200000003);
             lbl1.text("click smiley");
 		    btn1 = 
-			new ms.ui.Button(test1.manager, test1, null, null);
+			new ms.ui.Button(test1.manager, test1, "images/smile_sad_48.png", "images/smile_grin_48.png");
         btn1 = btn1;
             btn1.set_placement("center");
             btn1.set_rotation(0.200000003);
@@ -322,7 +322,7 @@ btn1.set_rotation(btn1.get_rotation() + 0.200000003);
             pb1.set_width(150);
             pb1.set_height(10);
 		    btn2 = 
-			new ms.ui.Image(test2.manager, test2, null);
+			new ms.ui.Image(test2.manager, test2, "images/arrow_left.png");
         btn2 = btn2;
             btn2.set_x(200);
             btn2.set_y(115);
@@ -336,7 +336,7 @@ btn1.set_rotation(btn1.get_rotation() + 0.200000003);
 	);
 		application.are_obj_events = true;
 		    btn3 = 
-			new ms.ui.Image(test2.manager, test2, null);
+			new ms.ui.Image(test2.manager, test2, "images/arrow_right.png");
         btn3 = btn3;
             btn3.set_x(380);
             btn3.set_y(115);
@@ -350,14 +350,14 @@ btn1.set_rotation(btn1.get_rotation() + 0.200000003);
 	);
 		application.are_obj_events = true;
 		    lbl2 = 
-			new ms.ui.Label(test2.manager, test2, null);
+			new ms.ui.Label(test2.manager, test2, "Verdana");
         lbl2 = lbl2;
             lbl2.set_x(210);
             lbl2.set_y(200);
             lbl2.set_rotation(0.200000003);
             lbl2.text("click small arrows to adjust percentage");
 		    btnNext = 
-			new ms.ui.Button(g_ui_root.manager, g_ui_root, null, null);
+			new ms.ui.Button(g_ui_root.manager, g_ui_root, "images/arrow_right_green_48.png", "images/arrow_right_48.png");
         btnNext = btnNext;
             btnNext.set_x(320);
             btnNext.set_y(300);
@@ -375,7 +375,7 @@ btnNext.set_rotation(btnNext.get_rotation() + 0.200000003);
 	);
 		application.are_obj_events = true;
 		    btnPrev = 
-			new ms.ui.Button(g_ui_root.manager, g_ui_root, null, null);
+			new ms.ui.Button(g_ui_root.manager, g_ui_root, "images/arrow_left_green_48.png", "images/arrow_left_48.png");
         btnPrev = btnPrev;
             btnPrev.set_x(220);
             btnPrev.set_y(300);
