--- a/xss/production/test/ui_sprite.html
+++ b/xss/production/test/ui_sprite.html
@@ -437,13 +437,13 @@ window.onload = function()
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    monster = 
-			new ms.ui.Sprite(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Sprite(g_ui_root.manager, g_ui_root, "monster_sheet");
         monster = monster;
             monster.set_x(200);
             monster.set_y(200);
             monster.set_animation("m_idle");
 		    girl1 = 
-			new ms.ui.Sprite(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Sprite(g_ui_root.manager, g_ui_root, "azucola_sheet");
         girl1 = girl1;
             girl1.set_x(300);
             girl1.set_y(200);
@@ -460,7 +460,7 @@ girl1.set_animation("g1_idle");
 	);
 		application.are_obj_events = true;
 		    girl2 = 
-			new ms.ui.Sprite(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Sprite(g_ui_root.manager, g_ui_root, "azucola_sheet");
         girl2 = girl2;
             girl2.set_x(400);
             girl2.set_y(200);
@@ -476,25 +476,25 @@ girl2.set_animation("g2_idle");
 	);
 		application.are_obj_events = true;
 		    mario = 
-			new ms.ui.Sprite(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Sprite(g_ui_root.manager, g_ui_root, "mario_sheet");
         mario = mario;
             mario.set_x(300);
             mario.set_y(400);
             mario.set_animation("m_idle_r");
 		    lbl1 = 
-			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, "12px Verdana");
         lbl1 = lbl1;
             lbl1.set_x(100);
             lbl1.set_y(100);
             lbl1.text("Press left arrow to walk the monster");
 		    lbl2 = 
-			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, "12px Verdana");
         lbl2 = lbl2;
             lbl2.set_x(100);
             lbl2.set_y(120);
             lbl2.text("Click the blond girl to crash her down and jump later (testing animation queue)");
 		    lbl3 = 
-			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, "12px Verdana");
         lbl3 = lbl3;
             lbl3.set_x(100);
             lbl3.set_y(140);
