--- a/xss/production/test/uibuffer_test.html
+++ b/xss/production/test/uibuffer_test.html
@@ -249,13 +249,13 @@ threejs_load_resources(function()
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    lbl0 = 
-			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, "12px Verdana");
         lbl0 = lbl0;
             lbl0.set_x(200);
             lbl0.set_y(75);
             lbl0.text("Drag mouse to spin the cube");
 		    lbl1 = 
-			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, "12px Verdana");
         lbl1 = lbl1;
             lbl1.set_x(200);
             lbl1.set_y(120);
@@ -289,7 +289,7 @@ application.events.addListener("t_mousedown", function(x, y, texture)
 				webmail_ui.mousedown(x*200, y*200);
 	});
 		    r1 = 
-			new ms.ui.Rectangle(webmail_g_ui_root.manager, webmail_g_ui_root, null, null, null);
+			new ms.ui.Rectangle(webmail_g_ui_root.manager, webmail_g_ui_root, "beige", null, null);
         r1 = r1;
             r1.set_x(0);
             r1.set_y(0);
@@ -298,7 +298,7 @@ application.events.addListener("t_mousedown", function(x, y, texture)
             r1.mouse_thru = true;
             r1.alpha(60);
 		    yh = 
-			new ms.ui.Button(webmail_g_ui_root.manager, webmail_g_ui_root, null, null);
+			new ms.ui.Button(webmail_g_ui_root.manager, webmail_g_ui_root, "images/yahoo_up.png", "images/yahoo.png");
         yh = yh;
             yh.set_x(25);
             yh.set_y(50);
@@ -312,7 +312,7 @@ application.events.addListener("t_mousedown", function(x, y, texture)
 	);
 		application.are_obj_events = true;
 		    msn = 
-			new ms.ui.Button(webmail_g_ui_root.manager, webmail_g_ui_root, null, null);
+			new ms.ui.Button(webmail_g_ui_root.manager, webmail_g_ui_root, "images/msn_up.png", "images/msn.png");
         msn = msn;
             msn.set_x(125);
             msn.set_y(50);
@@ -326,7 +326,7 @@ application.events.addListener("t_mousedown", function(x, y, texture)
 	);
 		application.are_obj_events = true;
 		    title1 = 
-			new ms.ui.Label(webmail_g_ui_root.manager, webmail_g_ui_root, null);
+			new ms.ui.Label(webmail_g_ui_root.manager, webmail_g_ui_root, "12px Verdana");
         title1 = title1;
             title1.set_x(50);
             title1.set_y(10);
@@ -360,7 +360,7 @@ application.events.addListener("t_mousedown", function(x, y, texture)
 				soc_net_ui.mousedown(x*200, y*200);
 	});
 		    r2 = 
-			new ms.ui.Rectangle(soc_net_g_ui_root.manager, soc_net_g_ui_root, null, null, null);
+			new ms.ui.Rectangle(soc_net_g_ui_root.manager, soc_net_g_ui_root, "lightblue", null, null);
         r2 = r2;
             r2.set_x(0);
             r2.set_y(0);
@@ -369,7 +369,7 @@ application.events.addListener("t_mousedown", function(x, y, texture)
             r2.mouse_thru = true;
             r2.alpha(60);
 		    fb = 
-			new ms.ui.Button(soc_net_g_ui_root.manager, soc_net_g_ui_root, null, null);
+			new ms.ui.Button(soc_net_g_ui_root.manager, soc_net_g_ui_root, "images/facebook_up.png", "images/facebook.png");
         fb = fb;
             fb.set_x(25);
             fb.set_y(50);
@@ -383,7 +383,7 @@ application.events.addListener("t_mousedown", function(x, y, texture)
 	);
 		application.are_obj_events = true;
 		    tw = 
-			new ms.ui.Button(soc_net_g_ui_root.manager, soc_net_g_ui_root, null, null);
+			new ms.ui.Button(soc_net_g_ui_root.manager, soc_net_g_ui_root, "images/twitter_up.png", "images/twitter.png");
         tw = tw;
             tw.set_x(125);
             tw.set_y(50);
@@ -397,13 +397,12 @@ application.events.addListener("t_mousedown", function(x, y, texture)
 	);
 		application.are_obj_events = true;
 		    title2 = 
-			new ms.ui.Label(soc_net_g_ui_root.manager, soc_net_g_ui_root, null);
+			new ms.ui.Label(soc_net_g_ui_root.manager, soc_net_g_ui_root, "12px Verdana");
         title2 = title2;
             title2.set_x(50);
             title2.set_y(10);
             title2.text("Social networks");
-			materials = 
-			new Array() ;
+			    materials = new Array() ;
 __basic_material1 = new THREE.MeshBasicMaterial({
 color:Math.random() * 0xffffff
 	});
@@ -435,22 +434,19 @@ color:Grey
 plane_mat1 = new THREE.MeshBasicMaterial({
 color:Green
 	});
-			scene = 
-			new THREE.Scene() ;
-		camera_1 = 
-		new THREE.Camera(70, 1.5, 1, 1000, null) ;	
+			    scene = new THREE.Scene() ;
+		    camera_1 = 
+		    new THREE.Camera(70, 1.5, 1, 1000, null) ;	
 		active_camera = camera_1;
             camera_1.position.y = 300;
             camera_1.position.z = 500;
-	    cube_1_cube = 
-		new THREE.Cube(200, 200, 200, 1, 1, 1, materials, null, null) ;
+	    cube_1_cube = new THREE.Cube(200, 200, 200, 1, 1, 1, materials, null, null) ;
 	    cube_1 = new THREE.Mesh(cube_1_cube, new THREE.MeshFaceMaterial());
 	    scene.addObject(cube_1);
 		cube_1.events = new ms.event.EventHolder();
             cube_1.position.x = -150;
             cube_1.position.y = 50;
-	    plane_1_plane = 
-		new THREE.Plane(200, 200, null, null) ;
+	    plane_1_plane = new THREE.Plane(200, 200, null, null) ;
 	    plane_1 = new THREE.Mesh(plane_1_plane, plane_material);
 	    scene.addObject(plane_1);
 		plane_1.events = new ms.event.EventHolder();
